--- a/gallery1.html
+++ b/gallery1.html
@@ -84,5 +84,6 @@
             <img src="img/ikone_logo/github.png" alt="github">
         </a>
     </footer>
+    <script src="menu.js"></script>
 </body>
 </html>
