Ažuriranje cijelog repozitorija

--- a/gallery1.html
+++ b/gallery1.html
@@ -47,13 +47,13 @@
         <div class="gallery_g">
             <figure >
                 <a target="_blank" href="img/a1/a1_blagavaonica_dn.jpg" ><img src="img/a1/a1_blagavaonica_dn.jpg" alt="One bedroom apartment"></a>
-                <figcaption class="overlay">
+                <figcaption >
                     01 <br> Dining room and kitchen
                 </figcaption>
             </figure>
             <figure >
                 <a target="_blank" href="img/a1/soba.jpg" ><img src="img/a1/a1_kuhinja_soba.jpg" alt="One bedroom apartment"></a>
-                <figcaption class="overlay">
+                <figcaption >
                     02 <br>  Bedroom
                 </figcaption>
             </figure>
