--- a/gallery2.html
+++ b/gallery2.html
@@ -48,13 +48,13 @@
         <div class="gallery_g">
             <figure >
                 <a target="_blank" href="img/a2/a2_pogled.jpg" ><img src="img/a2/a2_pogled.jpg" alt="One bedroom apartment"></a>
-                <figcaption class="overlay">
+                <figcaption >
                     01 <br> View
                 </figcaption>
             </figure>
             <figure >
                 <a target="_blank" href="img/a2/a2_terasa.jpg" ><img src="img/a2/a2_terasa.jpg" alt="One bedroom apartment"></a>
-                <figcaption class="overlay">
+                <figcaption >
                     02 <br> Terrace
                 </figcaption>
             </figure>
