--- a/gallery3.html
+++ b/gallery3.html
@@ -47,13 +47,13 @@
         <div class="gallery_g">
             <figure >
                 <a target="_blank" href="img/a3/a3_vanjski_stol.jpg" ><img src="img/a3/a3_vanjski_stol.jpg" alt="One bedroom apartment"></a>
-                <figcaption class="overlay">
+                <figcaption >
                     01 <br> View
                 </figcaption>
             </figure>
             <figure >
                 <a target="_blank" href="img/a3/a3_pogled.jpg" ><img src="img/a3/a3_pogled.jpg" alt="One bedroom apartment"></a>
-                <figcaption class="overlay">
+                <figcaption >
                     02 <br>Terrace
                 </figcaption>
             </figure>
