--- a/gallery4.html
+++ b/gallery4.html
@@ -47,13 +47,13 @@
         <div class="gallery_g">
             <figure >
                 <a target="_blank" href="img/a4/a4_slika_sve.jpg" ><img src="img/a4/a4_slika_sve.jpg" alt="One bedroom apartment"></a>
-                <figcaption class="overlay">
+                <figcaption >
                     01 <br> Apartment
                 </figcaption>
             </figure>
             <figure >
                 <a target="_blank" href="img/a4/a4_kuhinja.jpg" ><img src="img/a4/a4_kuhinja.jpg" alt="One bedroom apartment"></a>
-                <figcaption class="overlay">
+                <figcaption >
                     02 <br> Kitchen
                 </figcaption>
             </figure>
