--- a/gallery6.html
+++ b/gallery6.html
@@ -47,13 +47,13 @@
         <div class="gallery_g">
             <figure >
                 <a target="_blank" href="img/a6/a6balkon.jpg" ><img src="img/a6/a6balkon.jpg" alt="One bedroom apartment"></a>
-                <figcaption class="overlay">
+                <figcaption >
                     01 <br> Terrace
                 </figcaption>
             </figure>
             <figure >
                 <a target="_blank" href="img/a6/a6dn.jpg" ><img src="img/a6/a6dn.jpg" alt="One bedroom apartment"></a>
-                <figcaption class="overlay">
+                <figcaption >
                     02 <br> Living room
                 </figcaption>
             </figure>
