--- a/gallery5.html
+++ b/gallery5.html
@@ -47,13 +47,13 @@
         <div class="gallery_g">
             <figure >
                 <a target="_blank" href="img/a5/a5balkon.jpg" ><img src="img/a5/a5balkon.jpg" alt="One bedroom apartment"></a>
-                <figcaption class="overlay">
+                <figcaption>
                     01 <br>Terrace
                 </figcaption>
             </figure>
             <figure >
                 <a target="_blank" href="img/a5/a5dnevni_i_blagavaona.jpg" ><img src="img/a5/a5dnevni_i_blagavaona.jpg" alt="One bedroom apartment"></a>
-                <figcaption class="overlay">
+                <figcaption >
                     02 <br> Living room
                 </figcaption>
             </figure>
